aws-load-balancer-controller-not-installed/app/resources/ALB_controller.yaml
---
# Source: aws-load-balancer-controller/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: aws-load-balancer-webhook-service
  namespace: kube-system
  labels:
    helm.sh/chart: aws-load-balancer-controller-1.4.7
    app.kubernetes.io/name: aws-load-balancer-controller
    app.kubernetes.io/instance: aws-load-balancer-controller
    app.kubernetes.io/version: "v2.4.6"
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/component: webhook
    prometheus.io/service-monitor: "false"
spec:
  ports:
    - port: 443
      name: webhook-server
      targetPort: webhook-server
  selector:
    app.kubernetes.io/name: aws-load-balancer-controller
    app.kubernetes.io/instance: aws-load-balancer-controller
---
# Source: aws-load-balancer-controller/templates/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: aws-load-balancer-controller
  namespace: kube-system
  labels:
    helm.sh/chart: aws-load-balancer-controller-1.4.7
    app.kubernetes.io/name: aws-load-balancer-controller
    app.kubernetes.io/instance: aws-load-balancer-controller
    app.kubernetes.io/version: "v2.4.6"
    app.kubernetes.io/managed-by: Helm
spec:
  replicas: 2
  selector:
    matchLabels:
      app.kubernetes.io/name: aws-load-balancer-controller
      app.kubernetes.io/instance: aws-load-balancer-controller
  template:
    metadata:
      labels:
        app.kubernetes.io/name: aws-load-balancer-controller
        app.kubernetes.io/instance: aws-load-balancer-controller
      annotations:
        prometheus.io/scrape: "true"
        prometheus.io/port: "8080"
    spec:
      serviceAccountName: aws-load-balancer-controller
      volumes:
        - name: cert
          secret:
            defaultMode: 420
            secretName: aws-load-balancer-tls
      securityContext:
        fsGroup: 65534
      containers:
        - name: aws-load-balancer-controller
          args:
            - --cluster-name=eks-example-us-east-1
            - --ingress-class=alb
            - --aws-region=us-east-1
            - --aws-vpc-id=vpc-0507871dacb1f4b6b
          command:
            - /controller
          securityContext:
            allowPrivilegeEscalation: false
            readOnlyRootFilesystem: true
            runAsNonRoot: true
          image: "public.ecr.aws/eks/aws-load-balancer-controller:v2.4.6"
          imagePullPolicy: IfNotPresent
          volumeMounts:
            - mountPath: /tmp/k8s-webhook-server/serving-certs
              name: cert
              readOnly: true
          ports:
            - name: webhook-server
              containerPort: 9443
              protocol: TCP
            - name: metrics-server
              containerPort: 8080
              protocol: TCP
          resources:
            {}
          livenessProbe:
            failureThreshold: 2
            httpGet:
              path: /healthz
              port: 61779
              scheme: HTTP
            initialDelaySeconds: 30
            timeoutSeconds: 10
      terminationGracePeriodSeconds: 10
      affinity:
        podAntiAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
            - weight: 100
              podAffinityTerm:
                labelSelector:
                  matchExpressions:
                    - key: app.kubernetes.io/name
                      operator: In
                      values:
                        - aws-load-balancer-controller
                topologyKey: kubernetes.io/hostname
      priorityClassName: "system-cluster-critical"
---
# Source: aws-load-balancer-controller/templates/ingressclass.yaml
apiVersion: v1
kind: List
metadata:
  name: ingress-class
items:
  - apiVersion: elbv2.k8s.aws/v1beta1
    kind: IngressClassParams
    metadata:
      name: alb
      labels:
        helm.sh/chart: aws-load-balancer-controller-1.4.7
        app.kubernetes.io/name: aws-load-balancer-controller
        app.kubernetes.io/instance: aws-load-balancer-controller
        app.kubernetes.io/version: "v2.4.6"
        app.kubernetes.io/managed-by: Helm
  - apiVersion: networking.k8s.io/v1
    kind: IngressClass
    metadata:
      name: alb
      labels:
        helm.sh/chart: aws-load-balancer-controller-1.4.7
        app.kubernetes.io/name: aws-load-balancer-controller
        app.kubernetes.io/instance: aws-load-balancer-controller
        app.kubernetes.io/version: "v2.4.6"
        app.kubernetes.io/managed-by: Helm
    spec:
      controller: ingress.k8s.aws/alb
---
# Source: aws-load-balancer-controller/templates/webhook.yaml
apiVersion: admissionregistration.k8s.io/v1
kind: MutatingWebhookConfiguration
metadata:
  name: aws-load-balancer-webhook
  labels:
    helm.sh/chart: aws-load-balancer-controller-1.4.7
    app.kubernetes.io/name: aws-load-balancer-controller
    app.kubernetes.io/instance: aws-load-balancer-controller
    app.kubernetes.io/version: "v2.4.6"
    app.kubernetes.io/managed-by: Helm
webhooks:
  - clientConfig:
      caBundle: LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSURRRENDQWlpZ0F3SUJBZ0lSQUtxNU1ZbGRSQzVMN3JHZmhQUThTOHN3RFFZSktvWklodmNOQVFFTEJRQXcKS2pFb01DWUdBMVVFQXhNZllYZHpMV3h2WVdRdFltRnNZVzVqWlhJdFkyOXVkSEp2Ykd4bGNpMWpZVEFlRncweQpNekF5TURreU16QTFOVFJhRncwek16QXlNRFl5TXpBMU5UUmFNQ294S0RBbUJnTlZCQU1USDJGM2N5MXNiMkZrCkxXSmhiR0Z1WTJWeUxXTnZiblJ5YjJ4c1pYSXRZMkV3Z2dFaU1BMEdDU3FHU0liM0RRRUJBUVVBQTRJQkR3QXcKZ2dFS0FvSUJBUUM4bEQ3L3VjcGcxa0JudHNLN3dSSzNjamxRSytXUzVTcENNMnIzVWQrWExFRm9ZVGZDQ1cxdAp0ZGhzNDB6bjhB [...]

      service:
        name: aws-load-balancer-webhook-service
        namespace: kube-system
        path: /mutate-v1-pod
    failurePolicy: Fail
    name: mpod.elbv2.k8s.aws
    admissionReviewVersions:
      - v1beta1
    namespaceSelector:
      matchExpressions:

        - key: elbv2.k8s.aws/pod-readiness-gate-inject
          operator: In
          values:
            - enabled
    
    objectSelector:
      matchExpressions:
        - key: app.kubernetes.io/name
          operator: NotIn
          values:
            - aws-load-balancer-controller
    rules:
      - apiGroups:
          - ""
        apiVersions:
          - v1
        operations:
          - CREATE
        resources:
          - pods
    sideEffects: None
  - clientConfig:
      caBundle: LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSURRRENDQWlpZ0F3SUJBZ0lSQUtxNU1ZbGRSQzVMN3JHZmhQUThTOHN3RFFZSktvWklodmNOQVFFTEJRQXcKS2pFb01DWUdBMVVFQXhNZllYZHpMV3h2WVdRdFltRnNZVzVqWlhJdFkyOXVkSEp2Ykd4bGNpMWpZVEFlRncweQpNekF5TURreU16QTFOVFJhRncwek16QXlNRFl5TXpBMU5UUmFNQ294S0RBbUJnTlZCQU1USDJGM2N5MXNiMkZrCkxXSmhiR0Z1WTJWeUxXTnZiblJ5YjJ4c1pYSXRZMkV3Z2dFaU1BMEdDU3FHU0liM0RRRUJBUVVBQTRJQkR3QXcKZ2dFS0FvSUJBUUM4bEQ3L3VjcGcxa0JudHNLN3dSSzNjamxRSytXUzVTcENNMnIzVWQrWExFRm9ZVGZDQ1cxdAp0ZGhzNDB6bjhB [...]

      service:
        name: aws-load-balancer-webhook-service
        namespace: kube-system
        path: /mutate-elbv2-k8s-aws-v1beta1-targetgroupbinding
    failurePolicy: Fail
    name: mtargetgroupbinding.elbv2.k8s.aws
    admissionReviewVersions:
      - v1beta1
    rules:
      - apiGroups:
          - elbv2.k8s.aws
        apiVersions:
          - v1beta1
        operations:
          - CREATE
          - UPDATE
        resources:
          - targetgroupbindings
    sideEffects: None
---
# Source: aws-load-balancer-controller/templates/webhook.yaml
apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingWebhookConfiguration
metadata:
  name: aws-load-balancer-webhook
  labels:
    helm.sh/chart: aws-load-balancer-controller-1.4.7
    app.kubernetes.io/name: aws-load-balancer-controller
    app.kubernetes.io/instance: aws-load-balancer-controller
    app.kubernetes.io/version: "v2.4.6"
    app.kubernetes.io/managed-by: Helm
webhooks:
  - clientConfig:
      caBundle: LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSURRRENDQWlpZ0F3SUJBZ0lSQUtxNU1ZbGRSQzVMN3JHZmhQUThTOHN3RFFZSktvWklodmNOQVFFTEJRQXcKS2pFb01DWUdBMVVFQXhNZllYZHpMV3h2WVdRdFltRnNZVzVqWlhJdFkyOXVkSEp2Ykd4bGNpMWpZVEFlRncweQpNekF5TURreU16QTFOVFJhRncwek16QXlNRFl5TXpBMU5UUmFNQ294S0RBbUJnTlZCQU1USDJGM2N5MXNiMkZrCkxXSmhiR0Z1WTJWeUxXTnZiblJ5YjJ4c1pYSXRZMkV3Z2dFaU1BMEdDU3FHU0liM0RRRUJBUVVBQTRJQkR3QXcKZ2dFS0FvSUJBUUM4bEQ3L3VjcGcxa0JudHNLN3dSSzNjamxRSytXUzVTcENNMnIzVWQrWExFRm9ZVGZDQ1cxdAp0ZGhzNDB6bjhB [...]

      service:
        name: aws-load-balancer-webhook-service
        namespace: kube-system
        path: /validate-elbv2-k8s-aws-v1beta1-targetgroupbinding
    failurePolicy: Fail
    name: vtargetgroupbinding.elbv2.k8s.aws
    admissionReviewVersions:
      - v1beta1
    rules:
      - apiGroups:
          - elbv2.k8s.aws
        apiVersions:
          - v1beta1
        operations:
          - CREATE
          - UPDATE
        resources:
          - targetgroupbindings
    sideEffects: None
  - clientConfig:
      caBundle: LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSURRRENDQWlpZ0F3SUJBZ0lSQUtxNU1ZbGRSQzVMN3JHZmhQUThTOHN3RFFZSktvWklodmNOQVFFTEJRQXcKS2pFb01DWUdBMVVFQXhNZllYZHpMV3h2WVdRdFltRnNZVzVqWlhJdFkyOXVkSEp2Ykd4bGNpMWpZVEFlRncweQpNekF5TURreU16QTFOVFJhRncwek16QXlNRFl5TXpBMU5UUmFNQ294S0RBbUJnTlZCQU1USDJGM2N5MXNiMkZrCkxXSmhiR0Z1WTJWeUxXTnZiblJ5YjJ4c1pYSXRZMkV3Z2dFaU1BMEdDU3FHU0liM0RRRUJBUVVBQTRJQkR3QXcKZ2dFS0FvSUJBUUM4bEQ3L3VjcGcxa0JudHNLN3dSSzNjamxRSytXUzVTcENNMnIzVWQrWExFRm9ZVGZDQ1cxdAp0ZGhzNDB6bjhB [...]

      service:
        name: aws-load-balancer-webhook-service
        namespace: kube-system
        path: /validate-networking-v1-ingress
    failurePolicy: Fail
    matchPolicy: Equivalent
    name: vingress.elbv2.k8s.aws
    admissionReviewVersions:
      - v1beta1
    rules:
      - apiGroups:
          - networking.k8s.io
        apiVersions:
          - v1
        operations:
          - CREATE
          - UPDATE
        resources:
          - ingresses
    sideEffects: None
